# flowtrain_stochastic_interpolation

./: .gitignore  pyproject.toml  readme.md  setup.py
examples/numerical_example/: full-pipeline-2D.ipynb
paper-figures/geoprocess-examples-figs/: transformation-examples.ipynb
paper-figures/unconditional-and-dike-prob-figs/: visualize.py
project/dataset-inspect/: get_categorical_weights.py
project/geodata-3d-conditional/: boreholes.py  callbacks.py  inference_demo.ipynb  model_inference_cond.py  model_inference_cond_ibex.py  model_inference_experiments.py  model_train.py  model_train_ema.py  model_train_ema_mixedpres_lowvram.py  model_train_inference.py  model_train_sh_inference_cond.py  show_solution.py  tensorprocessor.py  utils.py
project/geodata-3d-unconditional/: callbacks.py  model_train_inference.py  tensorprocessor.py  utils.py
project/geodata-3d-unconditional/demo_model/: large-file.txt
project/geodata-3dcategorical/: callbacks.py  model_train_inference.py
src/flowtrain/: __init__.py
src/flowtrain/dataloaders/: __init__.py  practicedata.py
src/flowtrain/interpolation/: interpolation.py
src/flowtrain/models/: __init__.py  persistence.py  unet_2d.py  unet_attn_3d.py  unet_attn_3d_cond.py  unet_attn_3d_cond_v2.py  unet_attn_3d_cond_v3.py
src/flowtrain/solvers/: solvers.py
src/flowtrain/utils/: plotting.py
tests/: test-intepolators.py
