[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowtrain"
version = "1.0.0"
description = "Generative AI for geogen data with stochastic interpolation"
authors = [{ name = "Simon Ghyselincks", email = "sghyselincks@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
  "numpy>=1.26,<2.0",
  "scipy>=1.10,<2.0",
  "torch>=2.8,<2.9",
  "torchvision>=0.23,<0.24",
  "pytorch-lightning>=2.5,<2.6",
  "lightning">=2.5,<2.6",
  "denoising-diffusion-pytorch>=2.2.5,<3.0",
  "torchdiffeq>=0.2.5,<0.3",
  "einops>=0.8,<0.9",
  "matplotlib>=3.7,<3.9",
  "tqdm>=4.66,<5.0",
  "seaborn>=0.13,<0.14",
  "wandb>=0.22,<0.23",
  "GeoGen @ git+https://github.com/eldadHaber/StructuralGeo.git@v1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
